style/base.css
.tiledb-widget {
    --prussian: #001759;
    --navy: #001e73;
    --azure: #0075ff;
    --azure--darken: #0463d4;
    --sky: #c8e0ff;
    --dark: #3c3c3c;
    --mediumDark: #838383;
    --lightGray: #ececec;
    --lightGray--darken: #d9d9da;
    --gray: #d8d8d8;
    --background: #fafafa;
    --white: #fff;
    --danger: #ff0062;
    --danger--darken: #bd024a;
    --warning: #ffa200;
    --warning--darken: #e49100;
    --ebony: #0f1426;
    --ebonyLight: #121930;
    --midnight: #151e38;
    --midnight--darken: #11192f;
    --midnightLight: #1a2342;
    --rhino: #252e4b;
    --fiord: #444c64;
    --kashmir: #446690;
    --success: #0075ff;
  
    --jp-image-zoomin: url('../icons/zoomin.svg');
    --jp-image-zoomout: url('../icons/zoomout.svg');
    --jp-image-zoomreset: url('../icons/zoomreset.svg');
  
    padding: 30px 0 10px;
    position: relative;
    width: 100%;
  }
  
  .tiledb-widget svg {
    height: 100%;
    transform-origin: top left;
  }
  
  svg{
    width:100%;
  }
  
  .tiledb-widget rect {
    fill: var(--mediumDark);
    width: 60px;
    height: 30px;
  }
  
  .tiledb-widget path {
    fill: none;
    stroke:#999;
  }
  
  .tiledb-widget text {
    fill: #fff;
    pointer-events: none;
  }
  
  .tiledb-widget .Not.Started {
    fill: var(--kashmir);
  }
  
  .tiledb-widget .Running {
    animation: dash 15s linear;
    animation-iteration-count: infinite;
    fill: #66cc99;
    stroke: #4e9c75;
    stroke-dasharray: 10;
    stroke-width: 3px;
  }
  
  .tiledb-widget .Running.node--small {
    stroke-width: 1px;
  }
  
  .tiledb-widget .path-Running {
    animation: dash-full 1s linear;
    animation-iteration-count: infinite;
    stroke-dasharray: 10;
    stroke-dashoffset: 100;
  }
  
  .tiledb-widget .Completed {
    fill: var(--success);
  }
  
  .tiledb-widget .Failed {
    fill: var(--danger);
  }
  
  .tiledb-widget .Cancelled {
    fill: var(--warning);
  }
  
  .tiledb-widget .tooltip {	
    background: var(--lightGray);
    box-shadow: 0 0 5px rgba(0, 0, 0, .25);
    color: var(--dark);
    position: fixed;
    text-align: center;
    font: 12px sans-serif;
    border: 0px;
    border-radius: 8px;
    pointer-events: none;
    padding: 5px;
    width: 65px;
  }
  
  .tiledb-widget .zoomControl, .resetControl {
    left: 0;
    position: absolute;
    top: 0;
    z-index: 1;
    cursor: pointer;
    background-color: var(--kashmir);
    background-image: var(--jp-image-zoomin);
    border: 0;
    border-radius: 4px;
    width: 20px;
    height: 20px;
    background-repeat: no-repeat;
    background-position: center;
    box-shadow: 0 0 3px rgba(0,0,0,.6);
    background-size: 15px;
  }
  
  .tiledb-widget .depth-0 {
    opacity: 0;
  }
  
  .resetControl {
    left: 80px;
    background-image: var(--jp-image-zoomreset);
    background-size: 14px;
  }
  
  #zoom_out {
    left: 40px;
    background-image: var(--jp-image-zoomout);
    background-size: 14px;
  }
  
  @keyframes dash {
    to {
      stroke-dashoffset: 1000;
    }
  }
  
  @keyframes dash-full {
    to {
      stroke-dashoffset: 0;
    }
  }
  

